--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ windows-drives = "0.5.0"
 powershell_script = "1.0.2"
 winapi = "0.3.9"
 affinity = "0.1.2"
+env_logger = "0.9.0"
+log = "0.4.17"
 
 [dependencies.windows]
 version = "0.39.0"
