--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ winapi = "0.3.9"
 affinity = "0.1.2"
 env_logger = "0.9.0"
 log = "0.4.17"
+json = "0.12.4"
 
 [dependencies.windows]
 version = "0.39.0"
